# notes-ketchup

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  sketch.html  vite.config.ts
src/: main.ts  sketch.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
